--- a/Passtimes/Passtimes/Base.lproj/Navigation.storyboard
+++ b/Passtimes/Passtimes/Base.lproj/Navigation.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kRi-LV-afK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kRi-LV-afK">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,7 +21,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="baa-d4-fBd" kind="relationship" relationship="viewControllers" id="b5O-Yq-nee"/>
-                        <segue destination="tvf-cb-hem" kind="relationship" relationship="viewControllers" id="LcG-gL-EIe"/>
+                        <segue destination="40x-yZ-zD0" kind="relationship" relationship="viewControllers" id="1sU-Cn-CJ5"/>
+                        <segue destination="tvf-cb-hem" kind="relationship" relationship="viewControllers" id="BVK-yj-oT7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h15-XY-yvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -46,7 +47,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RgU-jl-Qcv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="83" y="-113"/>
+            <point key="canvasLocation" x="77" y="-113"/>
+        </scene>
+        <!--Leaderboard-->
+        <scene sceneID="Hha-Jm-lyu">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Leaderboard" id="40x-yZ-zD0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="mFc-FC-Fio"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ta1-so-A0Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="106" y="-182"/>
         </scene>
     </scenes>
 </document>
